# vertigo-sync

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/: VertigoSyncPlugin.lua
assets/plugin_src/: 00_main.lua
benches/: sync_benchmark.rs
branding/: icon-direction.md
docs/: cli.md  configuration.md  migration-from-rojo.md  migration.md  quickstart.md  troubleshooting.md
docs/superpowers/plans/: 2026-03-20-edit-preview-extraction.md  2026-03-20-plugin-safety-validation.md  2026-03-20-unified-toolchain-plan.md
docs/superpowers/specs/: 2026-03-20-edit-preview-extraction-design.md  2026-03-20-plugin-safety-validation-design.md  2026-03-20-unified-toolchain-design.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: project_parse.rs  rbxl_xml.rs  sync_patch_request.rs
src/: builder_codegen.rs  config.rs  credentials.rs  errors.rs  fmt.rs  init.rs  lib.rs  main.rs  mcp.rs  migrate.rs  output.rs  plugin_smoke.rs  project.rs  publish.rs  rbxl.rs  scripts.rs  serve_rbxl.rs  server.rs  sourcemap.rs  validate.rs
src/lint/: mod.rs  rules.rs
src/package/: cache.rs  installer.rs  lockfile.rs  mod.rs  registry.rs
tests/: config_integration_test.rs  config_test.rs  fmt_test.rs  init_test.rs  lint_test.rs  lockfile_test.rs  migrate_test.rs  rbxl_test.rs  readiness_contract_test.rs  registry_test.rs  scripts_test.rs  wally_fallback_test.rs
