[package]
name = "vertigo-sync"
version = "0.1.0"
edition = "2024"
description = "Deterministic source snapshot and diff CLI for Vertigo"

[[bin]]
name = "vertigo-sync"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.26"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
notify = { version = "8", features = ["macos_fsevent"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rbx_binary = "2.0.1"
rbx_xml = "2.0.1"
rbx_dom_weak = "4.1.0"
rbx_types = "3.1.0"
rbx_reflection_database = "2.0.2"
tower-http = { version = "0.6", features = ["cors", "limit"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"
tempfile = "3"

[[bench]]
name = "sync_benchmark"
harness = false
