[package]
name = "vertigo-sync"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Deterministic source snapshot and diff CLI for Vertigo"
license = "MIT"
repository = "https://github.com/adpena/vertigo"
homepage = "https://github.com/adpena/vertigo"
documentation = "https://docs.rs/vertigo-sync"
readme = "README.md"
keywords = ["roblox", "studio", "sync", "luau", "cli"]
categories = ["command-line-utilities", "development-tools", "game-development"]
exclude = ["target/**"]

[[bin]]
name = "vertigo-sync"
path = "src/main.rs"

[dependencies]
anyhow = "1"
glob = "0.3"
toml_crate = { package = "toml", version = "0.8" }
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.28"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
itoa = "1"
memmap2 = "0.9"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
notify = { version = "8", features = ["macos_fsevent"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rbx_binary = "2.0.1"
rbx_xml = "2.0.1"
rbx_dom_weak = "4.1.0"
rbx_types = "3.1.0"
rbx_reflection_database = "2.0.2"
tower-http = { version = "0.6", features = ["cors", "limit"] }
uuid = { version = "1", features = ["v4"] }
owo-colors = "4"
supports-color = "3"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1"
tempfile = "3"

[[bench]]
name = "sync_benchmark"
harness = false
