[package]
name = "vertigo-sync"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
build = "build.rs"
description = "Fast, deterministic source sync for Roblox Studio"
license = "MIT"
repository = "https://github.com/adpena/vertigo-sync"
homepage = "https://github.com/adpena/vertigo-sync"
documentation = "https://docs.rs/vertigo-sync"
readme = "README.md"
keywords = ["roblox", "studio", "sync", "luau", "cli"]
categories = ["command-line-utilities", "development-tools", "game-development"]
exclude = ["target/**"]

[[bin]]
name = "vsync"
path = "src/main.rs"

[dependencies]
anyhow = "1"
glob = "0.3"
toml = "0.8"
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.28"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
itoa = "1"
memmap2 = "0.9"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
notify = { version = "8", features = ["macos_fsevent"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rbx_binary = "2.0.1"
rbx_xml = "2.0.1"
rbx_dom_weak = "4.1.0"
rbx_types = "3.1.0"
rbx_reflection_database = "2.0.2"
tower-http = { version = "0.6", features = ["cors", "limit"] }
uuid = { version = "1", features = ["v4"] }
owo-colors = "4"
supports-color = "3"
stylua = { version = "2.4.0", default-features = false, features = ["luau"] }
reqwest = { version = "0.12", features = ["json"] }
zip = "2"
dirs = "6"
semver = "1"
similar = "2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1"
tempfile = "3"

[[bench]]
name = "sync_benchmark"
harness = false
