[package]
name = "vertigo-sync-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
tempfile = "3"
vertigo-sync = { path = ".." }

[[bin]]
name = "project_parse"
path = "fuzz_targets/project_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rbxl_xml"
path = "fuzz_targets/rbxl_xml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sync_patch_request"
path = "fuzz_targets/sync_patch_request.rs"
test = false
doc = false
bench = false
